--- a/tutorial/bg_info/tutorial_julesrose/intermediate_quiz.html
+++ b/tutorial/bg_info/tutorial_julesrose/intermediate_quiz.html
@@ -81,7 +81,7 @@
                     <form id="qform" action=".">
                         <ol>
                             <li>
-                                <p class="What is <code>rosie go</code>?</p>
+                                <p class="question">What is <code>rosie go</code>?</p>
                                 <div id="1" class="questions">
                                     <ol type="A">
                                         <li><input type="radio" value="A" /><label for="A">A suite monitoring GUI</label><br/></li>
@@ -95,7 +95,7 @@
                                 </div>
                             </li>
                             <li>
-                                <p class="What is <code>rose edit</code>?</p>
+                                <p class="question">What is <code>rose edit</code>?</p>
                                 <div id="2" class="questions">
                                     <ol type="A">
                                         <li><input type="radio" value="A" /><label for="A">A suite monitoring GUI</label><br/></li>
@@ -109,7 +109,7 @@
                                 </div>
                             </li>
                             <li>
-                                <p class="What is <code>rose bush</code>?</p>
+                                <p class="question">What is <code>rose bush</code>?</p>
                                 <div id="3" class="questions">
                                     <ol type="A">
                                         <li><input type="radio" value="A" /><label for="A">A suite monitoring GUI</label><br/></li>
@@ -123,7 +123,7 @@
                                 </div>
                             </li>
                             <li>
-                                <p class="What is <code>cylc gcylc</code>?</p>
+                                <p class="question">What is <code>cylc gcylc</code>?</p>
                                 <div id="4" class="questions">
                                     <ol type="A">
                                         <li><input type="radio" value="A" /><label for="A">A suite monitoring GUI</label><br/></li>
@@ -137,7 +137,7 @@
                                 </div>
                             </li>
                             <li>
-                                <p class="What is <code>cylc gscan</code>?</p>
+                                <p class="question">What is <code>cylc gscan</code>?</p>
                                 <div id="5" class="questions">
                                     <ol type="A">
                                         <li><input type="radio" value="A" /><label for="A">A suite monitoring GUI</label><br/></li>
@@ -151,7 +151,7 @@
                                 </div>
                             </li>
                             <li>
-                                <p class="What is <code>cylc scan -c</code>?</p>
+                                <p class="question">What is <code>cylc scan -c</code>?</p>
                                 <div id="6" class="questions">
                                     <ol type="A">
                                         <li><input type="radio" value="A" /><label for="A">A suite monitoring GUI</label><br/></li>
@@ -635,7 +635,7 @@ rosie ____ &lt;SUITE_ID&gt; ;  cd &lt;SUITE_ID&gt; ; fcm ___ $lt;BRANCH_NAME&gt;
                                 <div id="44" class="questions">
                                     <ol type="A">
                                         <li><input type="radio" value="A" /><label for="A">Anyone</label><br/></li>
-                                        <li><input type="radio" value="B" /><label for="B">Anynoe with a MOSRS account</label><br/></li>
+                                        <li><input type="radio" value="B" /><label for="B">Anyone with a MOSRS account</label><br/></li>
                                         <li><input type="radio" value="C" /><label for="C">Anyone with a JULES MOSRS account</label><br/></li>
                                         <li><input type="radio" value="D" /><label for="D">Only the branch owner of the branch that they want to commit to the trunk</label><br/></li>
                                         <li><input type="radio" value="E" /><label for="E">JULES System Manager and UM Systems Team</label><br/></li>
@@ -648,7 +648,7 @@ rosie ____ &lt;SUITE_ID&gt; ;  cd &lt;SUITE_ID&gt; ; fcm ___ $lt;BRANCH_NAME&gt;
                                 <div id="44" class="questions">
                                     <ol type="A">
                                         <li><input type="radio" value="A" /><label for="A">Anyone</label><br/></li>
-                                        <li><input type="radio" value="B" /><label for="B">Anynoe with a MOSRS account</label><br/></li>
+                                        <li><input type="radio" value="B" /><label for="B">Anyone with a MOSRS account</label><br/></li>
                                         <li><input type="radio" value="C" /><label for="C">Anyone with a JULES MOSRS account</label><br/></li>
                                         <li><input type="radio" value="D" /><label for="D">Only the branch owner of the branch that they want to commit to the trunk</label><br/></li>
                                         <li><input type="radio" value="E" /><label for="E">JULES System Manager and UM Systems Team</label><br/></li>
@@ -656,6 +656,85 @@ rosie ____ &lt;SUITE_ID&gt; ;  cd &lt;SUITE_ID&gt; ; fcm ___ $lt;BRANCH_NAME&gt;
                                     </ol>
                                     <p class="answers D"><em>D</em></p>
                                 </div>                            </li>
+                            <li>                                                                <p class="question">Who can commit to a JULES-Rose suite on rosie u repository?
+</p>
+                                <div id="45" class="questions">
+                                    <ol type="A">
+                                        <li><input type="radio" value="A" /><label for="A">Anyone</label><br/></li>
+                                        <li><input type="radio" value="B" /><label for="B">Anyone with a JULES MOSRS account</label><br/></li>
+                                        <li><input type="radio" value="C" /><label for="C">Only the owner of the JULES-Rose suite</label><br/></li>
+                                        <li><input type="radio" value="D" /><label for="D">Only the owner of the JULES-Rose suite branch</label><br/></li>
+                                        <li><input type="radio" value="E" /><label for="E">JULES System Manager and UM Systems Team</label><br/></li>
+                                        <li><input type="radio" value="F" /><label for="F">JULES System Manager only</label><br/></li>
+                                    </ol>
+                                    <p class="answers C"><em>C</em></p>
+                                </div>                            </li>
+                            <li>                                                                <p class="question">Who can commit to a JULES-Rose suite branch on rosie u repository?
+</p>
+                                <div id="45" class="questions">
+                                    <ol type="A">
+                                        <li><input type="radio" value="A" /><label for="A">Anyone</label><br/></li>
+                                        <li><input type="radio" value="B" /><label for="B">Anyone with a JULES MOSRS account</label><br/></li>
+                                        <li><input type="radio" value="C" /><label for="C">Only the owner of the JULES-Rose suite</label><br/></li>
+                                        <li><input type="radio" value="D" /><label for="D">Only the owner of the JULES-Rose suite branch</label><br/></li>                                        <li><input type="radio" value="E" /><label for="E">JULES System Manager and UM Systems Team</label><br/></li>
+                                        <li><input type="radio" value="F" /><label for="F">JULES System Manager only</label><br/></li>
+                                    </ol>
+                                    <p class="answers D"><em>D</em></p>
+                                </div>                            </li>
+                            <li>                                                                <p class="question">What should be in the Ticket Description before the review is requested?
+</p>
+                                <div id="46" class="questions">
+                                    <ol type="A">
+                                        <li><input type="radio" value="A" /><label for="A">Description of what the ticket is to address</label><br/></li>
+                                        <li><input type="radio" value="B" /><label for="B">Description of how the ticket is to address the change</label><br/></li>
+                                        <li><input type="radio" value="C" /><label for="C">[wiki:ticket/###/TicketSummary Ticket Summary]</label><br/></li>
+                                        <li><input type="radio" value="D" /><label for="D">[log:main/branches/dev/USERNAME/BRANCH_NAME BRANCH_NAME]</label><br/></li>                                        <li><input type="radio" value="E" /><label for="E">[log:doc/branches/dev/USERNAME/BRANCH_NAME doc BRANCH_NAME] as required</label><br/></li>
+                                        <li><input type="radio" value="F" /><label for="F">All of the above</label><br/></li>
+                                    </ol>
+                                    <p class="answers F"><em>F</em></p>
+                                </div>                            </li>
+                            <li>                                                                <p class="question">Where is the evidence for the Ticket Summary page from the JULES rose stem tests located for copying?
+</p>
+                                <div id="47" class="questions">
+                                    <ol type="A">
+                                        <li><input type="radio" value="A" /><label for="A">cylc-run/&lt;SUITE_ID&gt;/trac.log</label><br/></li>
+                                        <li><input type="radio" value="B" /><label for="B">cylc-run/&lt;SUITE_ID&gt;/log/trac.log</label><br/></li>
+                                        <li><input type="radio" value="C" /><label for="C">cylc-run/&lt;SUITE_ID&gt;/log/suite/log</label><br/></li>
+                                        <li><input type="radio" value="D" /><label for="D">cylc-run/&lt;SUITE_ID&gt;/log/suite/err</label><br/></li>                                        <li><input type="radio" value="E" /><label for="E">rose bush</label><br/></li>
+                                    </ol>
+                                    <p class="answers A"><em>A</em></p>
+                                </div>                            </li>
+                            <li>                                                                <p class="question">What is the review process?
+<br/>
+create ticket -&gt; changes -&gt; ____________ &gt; ___________ &gt; ask for sci/tech rev and code rev &gt; _________ &gt; address comments &gt; sci/tech approve &gt; ___________ &gt; ____________ &gt; code approved &gt; JULES system manager or UM systems team to commit code
+</p>
+                                <div id="48" class="questions">
+                                    <ol type="A">
+                                        <li><input type="radio" value="A" /><label for="A">rose stem tests, complete ticket summary, assign code rev, assign sci/tech rev, address comments</label><br/></li>
+                                        <li><input type="radio" value="B" /><label for="B">rose stem tests, complete ticket summary, assign sci/tech rev, assign code rev, address comments</label><br/></li>
+                                        <li><input type="radio" value="C" /><label for="C">complete ticket summary, rose stem tests, assign sci/tech rev, assign code rev, address comments</label><br/></li>
+                                        <li><input type="radio" value="D" /><label for="D">complete ticket summary, rose stem tests, assign code rev, assign sci/tech rev, address comments</label><br/></li>
+                                    </ol>
+                                    <p class="answers B"><em>B</em></p>
+                                </div>                            </li>
+                            <li>                                                                <p class="question">Who can do a sci/tech rev?
+</p>
+                                <div id="49" class="questions">
+                                    <ol type="A">
+                                        <li><input type="radio" value="A" /><label for="A">Anyone</label><br/></li>
+                                        <li><input type="radio" value="B" /><label for="B">Anyone who has worked on the ticket</label><br/></li>
+                                        <li><input type="radio" value="C" /><label for="C">Anyone who has NOT worked on the ticket</label><br/></li>
+                                        <li><input type="radio" value="D" /><label for="D">Person with relavant understanding and background on the area</label><br/></li>
+<li><input type="radio" value="E" /><label for="E">1 &amp; 4</label><br/></li>
+<li><input type="radio" value="F" /><label for="F">2 &amp; 4</label><br/></li>
+<li><input type="radio" value="G" /><label for="G">3 &amp; 4</label><br/></li>
+<li><input type="radio" value="H" /><label for="H">1 &amp; 3</label><br/></li>
+
+                                    </ol>
+                                    <p class="answers G"><em>G</em></p>
+                                </div>                            </li>
+
+
 
 HEREHER
 
