All done except advanced material.

--- a/tutorial/bg_info/tutorial_julesrose/index.html
+++ b/tutorial/bg_info/tutorial_julesrose/index.html
@@ -40,6 +40,7 @@
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Other material <span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li class="dropdown-header">Quizzes</li>
+                                <li><a href="precourse_quiz.html">Pre-course Quiz</a></li>
                                 <li><a href="beginner_quiz.html">Beginner Quiz</a></li>
                                 <li><a href="intermediate_quiz.html">Intermediate Quiz</a></li>
                                 <li><a href="advanced_quiz.html">Advanced Quiz</a></li>
@@ -67,6 +68,7 @@
 
                             <ul>
                                 <h2>Quizzes</h2>
+                                <li><a href="precourse_quiz.html">Pre-course Quiz</a></li>
                                 <li><a href="beginner_quiz.html">Beginner Quiz</a></li>
                                 <li><a href="intermediate_quiz.html">Intermediate Quiz</a></li>
                                 <li><a href="advanced_quiz.html">Advanced Quiz</a></li>
