--- a/tutorial/bg_info/tutorial_julesrose/jr_beginner.html
+++ b/tutorial/bg_info/tutorial_julesrose/jr_beginner.html
@@ -45,7 +45,7 @@
                                 <li><a href="#jrsuites">JULES Rose suites</a></li>
                                 <li role="separator" class="divider"></li>
                                 <li class="dropdown-header">Beginner Practical's</li>
-                                <li><a href="#Pracs">Practicals</a></li>
+                                <li><a href="#Pracs">Practical's</a></li>
                                 <li><a href="#P1">Practical 1 - Background</a></li>
                                 <li><a href="#P2">Practical 2 - Basic FCM</a></li>
                                 <li><a href="#P3">Practical 3 - Checkout code</a></li>
@@ -57,6 +57,7 @@
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Other material <span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li class="dropdown-header">Quizzes</li>
+                                <li><a href="precourse_quiz.html">Pre-course Quiz</a></li>
                                 <li><a href="beginner_quiz.html">Beginner Quiz</a></li>
 
                                 <li><a href="intermediate_quiz.html">Intermediate Quiz</a></li>
@@ -112,35 +113,36 @@
       <p>
       Ideally the tutorial would be used in the following order:
       <ul>
-      <li><a href="jr_beginners.html">Beginners tutorial and practicals</a>
+      <li><a href="jr_beginners.html">Beginners tutorial and practical's</a>
       , pre-quiz section - this can be considered the starting point.</li>
-      <li><a href="beginners_quiz.html">Beginners quiz</a> - a quiz to
+      <li><a href="precourse_quiz.html">Pre-course Quiz</a> - a quiz to
       help you consider how you view your present understanding.</li>
-      <li><a href="jr_beginners.html">Beginners tutorial and practicals</a>
+      <li><a href="jr_beginners.html">Beginners tutorial and practical's</a>
       , post-quiz section - background, basic principles and some best working
        practices, introducing FCM, Rose, Cylc, rose-stem etc.</li>
-      <li><a href="intermediate_quiz.html">Intermediate quiz</a> - introducing
-      the concepts that you will be encountering in the Intermediate section.</li>
-      <li><a href="jr_intermediate.html">Intermediate tutorial and practicals</a>
+      <li><a href="beginners_quiz.html">Beginners Quiz</a> testing your 
+      leanring from the Beginners course.</li>
+      <li><a href="jr_intermediate.html">Intermediate tutorial and practical's</a>
       - this section is intended to provide the intermediate users information
       on using JULES-Rose.</li>
-      <li><a href="advanced_quiz.html">Advanced quiz</a> - introducing the
-      concepts that you will be encountering in the Advanced section.</li>
-      <li><a href="jr_advnaced.html">Advanced tutorial and practicals</a>
+      <li><a href="intermediate_quiz.html">Intermediate Quiz</a> testing your 
+      learning from the intermediate course.</li>
+      <li><a href="jr_advanced.html">Advanced tutorial and practical's</a>
       this section is intended for advanced uses of JULES-Rose and covers
       higher level development of code and suites.</li>
+      <li><a href="advanced_quiz.html">Advanced Quiz</a> testing your 
+      learnign from the advanced quiz.</li>
       </ul>
       The design of the tutorial does mean that the user can just access the
       parts of the tutorial that they wish.
       </p>
       </div>
         <div class="well">
-            First let's do the Beginner Quiz to see how much you already know and what we
-            will need to focus on in this section, note there are no right or wrong answers
-            for the first five questions.
+            First let's do the Pre-course Quiz to see how much you already know and what we
+            will need to focus on in this section, note there are no right or wrong answers.
         </div>
         <div class="container">
-            <p><a class="btn btn-lg btn-success" href="beginner_quiz.html" role="button">Beginner Quiz</a></p>
+            <p><a class="btn btn-lg btn-success" href="precourse_quiz.html" role="button">Pre-course Quiz</a></p>
         </div>
         <br/>
         <h1><a id="bgj">Background of JULES</a></h1>
@@ -348,7 +350,7 @@ resent there are 17 contributors, 11 of which are not Met Office UK.
             </div>
             <div class="well">
                 There is a draft tutorial on the <a href="http://jules-lsm.github.io/tutorial/bg_info/tutorial/fcm_fundamentals.html">JULES GitHub</a> pages.
-                When the offcial version is released it will be removed and this section will point to the offcial version.
+                When the official version is released it will be removed and this section will point to the official version.
                 <li>It is recommended that you use <code>FCM</code>, which is a wrapper to Subversion, it has some additional user friendly functionality.</li>
             </div>
         </ul>
@@ -378,7 +380,7 @@ resent there are 17 contributors, 11 of which are not Met Office UK.
             </div>
         </ul>
         <br/>
-        <h1><a id="Pracs">Practicals</a></h1>
+        <h1><a id="Pracs">Practical's</a></h1>
         <p>
         <ul>
             <div class="page-header">
@@ -959,12 +961,12 @@ may not have so many locations to delete any previous run's data from.
             Questions the on gcylc GUI
             <ol>
             <li>How can you find the error of a task?</li>
-            <li>In the image above in 5. what is the state of the 
+            <li>In the image above in 5. What is the state of the 
             fcm_make_meto_xce40_cce_debug task, what two ways do you know from
             the GUI?</li>
-            <li>In the image above in 5. what is the state of the 
+            <li>In the image above in 5. What is the state of the 
             METO_LINUX_BUILD family?</li>
-            <li>In the image above in 5. what is the state of the
+            <li>In the image above in 5. What is the state of the
             KGO_CHECK family?</li>
             <li>What does KGO stand for? (Answer is not in the GUI.)</li>
             <li>What two ways could you pause a suite?</li>
@@ -990,16 +992,16 @@ may not have so many locations to delete any previous run's data from.
 <font color=green>
 Right click on the task, select 'View', select 'job stderr'.
 </font>
-<li>In the image above in 5. what is the state of the 
+<li>In the image above in 5. What is the state of the 
 fcm_make_meto_xce40_cce_debug task, what two ways do you know from the GUI?</li>
 <font color=green>
 succeeded, it is a grey square and the 'state' column say 'succeeded'.
 </font>
-<li>In the image above in 5. what is the state of the METO_LINUX_BUILD family?</li>
+<li>In the image above in 5. What is the state of the METO_LINUX_BUILD family?</li>
 <font color=green>
 running
 </font>
-<li>In the image above in 5. what is the state of the KGO_CHECK family?</li>
+<li>In the image above in 5. What is the state of the KGO_CHECK family?</li>
 <font color=green>
 waiting
 </font>
@@ -2642,11 +2644,9 @@ soil_moisture_availability_factor_tseries.png
         <br/>
         <div class="container">
         <div class="well">
-        Now lets do the Intermediate Quiz to see how much you already know and what we
-        will need to focus on in the next section.
-        Don't worry if you don't know all the answers yet, we will learning more in the next tutorial.
+        Now lets do the Beginner Quiz to highlight your learning.
         </div>
-        <p><a class="btn btn-lg btn-success" href="intermediate_quiz.html" role="button">Intermediate Quiz</a></p>
+        <p><a class="btn btn-lg btn-success" href="beginner_quiz.html" role="button">Beginner Quiz</a></p>
         </div>
         <br/>
         <div class="container">
