--- a/tutorial/bg_info/tutorial_julesrose/jr_rosecylc_setup.html
+++ b/tutorial/bg_info/tutorial_julesrose/jr_rosecylc_setup.html
@@ -37,6 +37,7 @@
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Other material <span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li class="dropdown-header">Quizzes</li>
+                                <li><a href="precourse_quiz.html">Pre-course Quiz</a></li>
                                 <li><a href="beginner_quiz.html">Beginner Quiz</a></li>
                                 <li><a href="intermediate_quiz.html">Intermediate Quiz</a></li>
                                 <li><a href="advanced_quiz.html">Advanced Quiz</a></li>
@@ -185,7 +186,7 @@ include = $HERE/custom.cfg
                 <p>Please create a branch and add your site ???.cfg file to the
                    <code>$JULES_trunk/etc/fcm-make/platform/</code> directory.
                    This need so to be a ticket and then it can be reviewed by
-                   the JULES sysem manager so that it can be be part of the next
+                   the JULES system manager so that it can be be part of the next
                    JULES version code release for all your site to use.
                    Therefore each user will not need there own version of the
                    file.</p>
@@ -239,7 +240,7 @@ store-plaintext-passwords = no
                 <br/>
                 <p>Once you have done this you should see a <code>login</code> keyring listed under the <code>Passwords</code> tab and if you right click on the key the <code>Unlock</code> menu should be grayed out.</p>
                 <br/>
-                <p>Exit seahouse by closing the window.</p>
+                <p>Exit seahorse by closing the window.</p>
                 <br/>
                 <p>Cache your password</p>
                 <p>Run this command upto three times: <code>svn info https://code.metoffice.gov.uk/svn/test</code>
