--- a/tutorial/bg_info/tutorial_julesrose/jr_advanced.html
+++ b/tutorial/bg_info/tutorial_julesrose/jr_advanced.html
@@ -37,7 +37,7 @@
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Advanced material <span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li class="dropdown-header">Advanced Tutorials</li>
-                                <li><a href="#abc">abc</a></li>
+                                <li><a href="#umdp3">UMDP3</a></li>
                                 <li role="separator" class="divider"></li>
                                 <li class="dropdown-header">Advanced Practical's</li>
                                 <li><a href="#arst">Adding rose stem tests</a></li>
@@ -48,6 +48,7 @@
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Other material <span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li class="dropdown-header">Quizzes</li>
+                                <li><a href="precourse_quiz.html">Pre-course Quiz</a></li>
                                 <li><a href="beginner_quiz.html">Beginner Quiz</a></li>
 
                                 <li><a href="intermediate_quiz.html">Intermediate Quiz</a></li>
@@ -75,7 +76,7 @@
             <h1>Advanced JULES-Rose tutorial (in development)</h1>
             <p>This aims to explain the importance of:
             <ul>
-                <li><a href="#abc">abc</a></li>
+                <li><a href="#umdp3">UMDP3</a></li>
                 <li><a href="#arst">Adding rose stem tests</a></li>
                 <li><a href="#umjt">UM-JULES tickets</a></li>
                 <li><a href="#rfcmc">Resolving FCM conflicts</a></li>
@@ -88,7 +89,10 @@
             <p>It is expected that you have:
             <ul>
             <li>Completed the <a href="http://metomi.github.io/rose/doc/rose.html">Rose User Guide</a>.</li>
+            <li>Completed the <a href="jr_beginner.html">Beginner Tutorial</a>.</li>
+            <li>Completed the <a href="beginner_quiz.html">Beginner Quiz</a>.</li>
             <li>Completed the <a href="jr_intermediate.html">Intermediate Tutorial</a>.</li>
+            <li>Completed the <a href="intermediate_quiz.html">Intermediate Quiz</a>.</li>
             </ul>
             </p>
             <p>
@@ -102,24 +106,18 @@
             </p>
         </div>
 
-        <div class="well">
-            First let's do the Advanced Quiz to see how much you already know and what we
-            will need to focus on in this section.
-        </div>
-        <div class="container">
-            <p><a class="btn btn-lg btn-success" href="advanced_quiz.html" role="button">Advanced Quiz</a></p>
-        </div>
         <br/>
 
 
-        <h2><a id="abc">abc</a></h2>
+        <h2><a id="umdp3">UMDP3</a></h2>
         <p>
         <ul>
             <div class="page-header">
-                <h3>HERE?????</h3>
+                <h3>In development. Coming soon.</h3>
             </div>
             <div class="well">
-               <p> </p>
+               <p>The UM Systems team provide detailed guidance on software
+                  standards, which can be found in their <a href="https://code.metoffice.gov.uk/doc/um/latest/papers/umdp_003.pdf">UMDP3</a> pdf.</p>
 
 
             </div>
@@ -130,7 +128,7 @@
         <p>
         <ul>
             <div class="page-header">
-                <h3>HERE?????</h3>
+                <h3>In development. Coming soon.</h3>
             </div>
             <div class="well">
                <p> </p>
@@ -144,11 +142,16 @@
         <p>
         <ul>
             <div class="page-header">
-                <h3>HERE?????</h3>
+                <h3>In development. Coming soon.</h3>
             </div>
             <div class="well">
                <p> </p>
-
+<pre>
+fcm co fcm:um.x_tr
+cd trunk
+rose stem --group=jules --new --name=umtr_jlst### --source=. --source=/path/tp/jules/branch
+# trac.log will appear in the cylc-run/umtr_jlst### when the rose stem tests have finished.
+</pre>
 
             </div>
         </ul>
@@ -158,12 +161,108 @@
         <p>
         <ul>
             <div class="page-header">
-                <h3>HERE?????</h3>
+                <h3>FCM Text and Tree conflicts.</h3>
             </div>
+            <p>Sometimes when we merge branches into HoT branches we recieve a
+               message at the end of the merge saying that we have 
+               <code>Text Conflicts</code> or <code>Tree Conflicts</code>.
+               <code>Text Conflicts</code> are easier to resolve than
+                <code>Tree Conflicts</code> in general.</p>
             <div class="well">
-               <p> </p>
-
-
+            <h4>fcm conflicts</h4>
+            <p>The command <code>fcm conflicts|cf</code> is a graphical tool to help
+               resolve conflicts within the local/working copy.
+               Note it cannot help with all conflicts.
+               It works with the most effectively with Text Conflicts.
+            </p>
+            <p>A type of conflict that we may come across are "Text conflicts".
+               These are returned via <code>fcm st</code> as
+            </p>
+            <pre>C    statusesC_text.txt </pre>
+            <p>where column 1 has a "C" in it.
+            </p>
+            <p>To resolve the text conflict we use the 3-way difference tool xxdiff.
+            </p>
+            <p>For each file with a text conflict, the <code>fcm conflicts</code> command
+               calls a graphical merge tool (i.e. xxdiff by default) to display a 3-way diff.
+            </p>
+            <h4>How to use xxdiff to help resolve text conflicts</h4>
+            <p>The file on the left is our original file.
+               The file in the middle is the common ancestor from the merge.
+               The file on the right is the file containing the changes which we are merging
+               in.
+            </p>
+            <p>The image below shows an image of a text conflict.</p> 
+            <img src="images/text_conflict2.png" width="95%" id="fcm_cf">
+           <p>Left click on the text option that we want to keep, it should change colour
+           from yellow to purple.
+                                 </p>
+           <p>Then press "m", or use the toolbar; File -&gt; Exit with MERGED M.</p>
+            <h4>Explanations of the three window split xxdiff:</h4>
+            <p>The number on the far right panel of xxdiff tool is the number of unselected
+               differences, known as "hunks" or "sections" and they are often seen in yellow.
+               The correct term for the highlighted section is hunk, but here we will refer to
+               it as the section as it is easier to understand and remember what we are talking about.
+            </p>
+            <p>When this number is 0 then we are ready to save the merged file.
+            </p>
+            <p>To see how the merged file will look with the current selections, click
+               Windows-&gt;Toggle Merged View (keyboard shortcut: Alt+Y).
+            </p>
+            <p>An extra window then appears showing the merged output that updates
+               interactively as we make our selections.
+            </p>
+            <p>
+               If we just want to exit without making any decisions we can also just close
+               the window.
+            </p>
+            <p>
+               <a href="http://furius.ca/xxdiff/doc/xxdiff-doc.html">xxdiff documentation</a>
+            </p>
+            <p>
+               If we have resolved all the conflicts in a file then we will be prompted on
+               whether to run <code>svn resolved</code> on the file to signal that the file
+               is no longer in conflict.
+            </p>
+         </div>
+         <div class="well">
+            <h4>fcm resolve</h4>
+            <p>The <code>fcm resolve</code> command can be used to resolve conflicts in
+               local/working copy files or directories.
+                Mainly tree conflicts.
+            </p>
+            <p>A common way of using this command is:
+            </p>
+            <p><code>fcm resolve --accept working &lt;FILENAME&gt;</code>
+            </p>
+            <p>This will try to resolve the tree conflict and ask you if you 
+               would like to go ahead with the merge? This is fo you to decide.</p>
+            <p>
+               A common way that a tree conflict occurs is after a merge when a file has been
+               deleted or renamed on one branch, and modified on another.
+               These are incompatible changes, therefore Subversion doesn't know which
+               action to take.
+               This is the cause of the tree conflict dilemma which the user must solve.
+            </p>
+            <p>Example: choose to keep the local version or not?</p>
+<pre>
+[info] tree_conflict.txt: in tree conflict.
+Locally: deleted.
+Externally: edited.
+Answer (y) to accept the local delete.
+Answer (n) to keep the file.
+Keep the local version?
+Enter "y" or "n" (or just press &lt;return&gt; for "n") y
+Resolved conflicted state of 'tree_conflict.txt'
+</pre>
+            <p>In this example, to keep the file as it was before (in a deleted state), enter
+               <samp>y</samp>.
+            </p>
+            <p>Otherwise, to accept the merge branch version of the file (adding it with the
+               edited changes), enter <samp>n</samp>.
+            </p>
+            <br/>
+            <p>See a tutorial on <a href="http://jules-lsm.github.io/tutorial/bg_info/tutorial/fcm_specifics.html#cf">FCM conflicts</a> for more details.</p>
             </div>
         </ul>
         </p>
@@ -172,8 +271,14 @@
             <br/>
 
             <h3>Congratulations you have completed the Advanced Tutorial!</h3>
-
-
+        <br/>
+        <div class="container">
+        <div class="well">
+        Now lets do the Advanced Quiz to highlight your learning.
+        </div>
+        <p><a class="btn btn-lg btn-success" href="Advanced_quiz.html" role="button">Advanced Quiz</a></p>
+        </div>
+        <br/>
         <br/>
         <div class="container">
         <div class="well">
