Updating index file to publish JULES-Rose tutorial.

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
             <h2>Tutorials</h2>
             <ul>
                 <li><a href="tutorial/bg_info/tutorial/fcm_fundamentals.html">Background tutorial</a></li>
+                <li><a href="tutorial/bg_info/tutorial_julesrose/index.html">JULES-Rose tutorial index</a></li>
+                <li><a href="tutorial/bg_info/tutorial_julesrose/jr_beginner.html">JULES-Rose tutorial Beginner</a></li>
             </ul>
         </div>
     </body>
