For adding the request for JULES code to github.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
         <h1>Joint UK Land Environment Simulator (JULES) Documentation</h1>
 
         <div class="content">
+            <h2>User Accounts</h2>
+            <ul>
+                <li><a href="access_req/JULES_access.html">Requesting access to the JULES code</a></li>
+            </ul>
             <h2>User Guide</h2>
             <ul>
                 <li><a href="vn3.3">vn3.3</a></li>
