--- a/tutorial/bg_info/tutorial_julesrose/jr_advanced.html
+++ b/tutorial/bg_info/tutorial_julesrose/jr_advanced.html
@@ -152,6 +152,10 @@ cd trunk
 rose stem --group=jules --new --name=umtr_jlst### --source=. --source=/path/tp/jules/branch
 # trac.log will appear in the cylc-run/umtr_jlst### when the rose stem tests have finished.
 </pre>
+            <p>If the UM rose-stem tests fail, it may be because your changes
+               require UM meta-data changes and/or a UM upgrade macro.
+               In this case, you will need to create a UM branch, following 
+               the <a href="https://code.metoffice.gov.uk/trac/um/wiki/working_practices">working_practices UM working practices</a>.
 
             </div>
         </ul>
